# trading-portfolio-manager

./: .gitignore  LICENSE  README.md  back.py  iterations.md  pyproject.toml
src/portfolio-manager/: __init__.py  constants.py  functions.py
src/portfolio_manager/: __init__.py  functions.py
src/trading_portfolio_manager/: __init__.py  functions.py
tests/: position_manager_test.py  position_test.py
